# rubrik-sdk-for-python

./: .gitignore  .graphqlconfig  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  README.md  bla.py  book.json  bootstrap.json  bootstrap.py  bootstrap_physical.py  create_docs.py  rubrik.html  rubrik.py  schema.graphql  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  start.sh
.github/: CODEOWNERS  pull_request_template.md
docs/: Makefile  README.MD  README.md  SUMMARY.md  _api_validation.md  _authorization_header.md  _common_api.md  _date_time_conversion.md  _db_a_event_id.md  _db_d_event_id.md  _db_q_backlog.md  _db_q_event_id.md  _db_u_bun_state.md  _db_u_job_state.md  _download.md  _generate.md  _header.md  _platform_user_agent.md  _status.md  _time_in_range.md  _validate_sql_db.md  _validate_sql_recovery_point.md  add_archive_aws_s3.md  add_archive_azure.md  add_aws_native_account.md  add_aws_s3_archive.md  add_floating_ips.md  add_guest_credential.md  add_guest_creds.md  add_host_share.md  add_nas_share_to_host.md  add_organization_protectable_object_mssql_server_host.md  add_organization_protectable_object_sql_server_availability_group.md  add_organization_protectable_object_sql_server_db.md  add_physical_host.md  add_vcenter.md  assign_physical_host_fileset.md  assign_sla.md  aws_s3_cloudon.md  aws_s3_cloudout.md  (+102 more)
rubrik/: __init__.py  api.py  cloud.py  cluster.py  core.py  data_management.py  physical.py  rubrik.py
rubrik_cdm/: __init__.py  api.py  cloud.py  cluster.py  data_management.py  events.py  (+5 more)
(+580 files in other folders)
