[metadata]
name=rubrik
version=1.0
url=https://github.com/rubrik-devops/rubrik-sdk-for-python
author=Rubrik Ranger Team
description=A Python package for interacting with the Rubrik CDM API.
long_description=file:README.md
license=Apache
classifiers=
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: Apache

[options]
zip_safe=true
install_requires=
    requests ~= 2.18.4
    python-dateutil
    pytz
packages=find:
tests_require=
    pytest

[options.packages.find]
exclude =
    tests

[aliases]
test=pytest