[metadata]
name=rubrik_cdm
version=1.0
url=https://github.com/rubrik-devops/rubrik-sdk-for-python
author=Rubrik Ranger Team
description=A Python package for interacting with the Rubrik CDM API.
long_description=file:README.md
long_description_content_type='text/markdown'
license=Apache
classifiers=
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[options]
zip_safe=true
install_requires=
    requests ~= 2.18.4
    python-dateutil
    pytz
packages=find:
tests_require=
    pytest

[options.packages.find]
exclude =
    tests

[aliases]
test=pytest